--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-  background-color: white;
+  background-color: var(--primary-blue);
   padding: 1rem 2rem;
   display: flex;
   justify-content: space-between;
